--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-router-dom": "^5.1.0",
     "ionicons": "^4.6.3",
     "node-sass": "^4.13.0",
+    "qrcode-generator": "^1.4.4",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-map-gl": "^5.1.2",
