--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react-map-gl": "^5.0.2",
     "@types/react-router": "^5.1.1",
     "@types/react-router-dom": "^5.1.0",
+    "axios": "^0.19.0",
     "ionicons": "^4.6.3",
     "node-sass": "^4.13.0",
     "react": "^16.10.2",
