--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@ionic/react-router": "^4.11.0",
     "@types/jest": "^24.0.18",
     "@types/node": "^12.7.12",
+    "@types/qs": "^6.9.0",
     "@types/react": "^16.9.5",
     "@types/react-dom": "^16.9.1",
     "@types/react-map-gl": "^5.0.2",
