--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@ionic/react": "^4.11.0",
     "@ionic/react-router": "^4.11.0",
     "@types/jest": "^24.0.18",
+    "@types/lodash": "^4.14.148",
     "@types/node": "^12.7.12",
     "@types/qs": "^6.9.0",
     "@types/react": "^16.9.5",
@@ -16,6 +17,7 @@
     "axios": "^0.19.0",
     "debounce": "^1.2.0",
     "ionicons": "^4.6.3",
+    "lodash": "^4.17.15",
     "node-sass": "^4.13.0",
     "qrcode-generator": "^1.4.4",
     "qs": "^6.9.1",
